[package]
name = "haste-rs"
version = "1.0.0"
readme = "README.md"
repository = "https://github.com/bks1b/haste.rs"
documentation = "https://github.com/bks1b/haste.rs"
description = "A CLI to interact with hastebin servers"
edition = "2018"
keywords = ["bin", "cli"]

[dependencies]
reqwest = { version = "0.10.8", features = ["blocking"] }
serde = { version = "1.0.116", features = ["derive"] }
serde_json = "1.0.58"
regex = "1"